update example template

--- a/qcodespp_template.ipynb
+++ b/qcodespp_template.ipynb
@@ -163,8 +163,7 @@
     "               start=0,stop=1,num=101,delay=0.03,\n",
     "               device_info='Device1',\n",
     "               instrument_info=f'ACdiv=1e5 DCdiv=1e3 freq={li.osc0_freq():.6g} Hz',\n",
-    "               measure=[currentX, currentY, voltageX, voltageY, resistance],\n",
-    "               plot=[currentX,voltageX,resistance])"
+    "               measure=[currentX, currentY, voltageX, voltageY, resistance])"
    ]
   },
   {
@@ -174,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=loop.run()"
+    "data=loop.run(currentX,voltageX,resistance)"
    ]
   },
   {
@@ -211,13 +210,12 @@
     "               device_info='Device1',\n",
     "               instrument_info=f'ACdiv=1e5 DCdiv=1e3 freq={li.osc0_freq():.6g} Hz',\n",
     "               measure=[qc.BreakIf(lambda: np.abs(k2450.curr())>1e-9), \n",
-    "                        currentX, currentY, voltageX, voltageY, resistance],\n",
-    "               plot=[currentX,voltageX,resistance])"
+    "                        currentX, currentY, voltageX, voltageY, resistance])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b119fdda-20b3-4feb-aaaf-43919237233b",
    "metadata": {},
    "outputs": [
@@ -261,7 +259,7 @@
     }
    ],
    "source": [
-    "data=loop.run()"
+    "data=loop.run(currentX,voltageX,resistance)"
    ]
   },
   {
@@ -309,13 +307,12 @@
     "                step_start=0,step_stop=1,step_num=11,step_delay=0.1,\n",
     "                device_info='Device1',\n",
     "                instrument_info=f'ACdiv=1e5 DCdiv=1e3 freq={li.osc0_freq():.6g} Hz',\n",
-    "                measure=[currentX, currentY, voltageX, voltageY, resistance],\n",
-    "                plot=[currentX,voltageX,resistance])"
+    "                measure=[currentX, currentY, voltageX, voltageY, resistance])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "76a031b8-5b3b-49a0-b841-ba88f7d3cccc",
    "metadata": {},
    "outputs": [
@@ -360,7 +357,7 @@
     }
    ],
    "source": [
-    "data=loop.run()"
+    "data=loop.run(currentX,voltageX,resistance)"
    ]
   },
   {
@@ -407,13 +404,12 @@
     "                step_start=0,step_stop=1,step_num=11,step_delay=0.1,\n",
     "                device_info='Device1',\n",
     "                instrument_info=f'ACdiv=1e5 DCdiv=1e3 freq={li.osc0_freq():.6g} Hz',\n",
-    "                measure=[currentX, currentY, voltageX, voltageY, resistance],\n",
-    "                plot=[currentX,voltageX,resistance])"
+    "                measure=[currentX, currentY, voltageX, voltageY, resistance])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "18ceea71-9f5e-4a73-a88b-ed4fadf77e88",
    "metadata": {},
    "outputs": [
@@ -465,7 +461,7 @@
     }
    ],
    "source": [
-    "data=loop.run()"
+    "data=loop.run(currentX,voltageX,resistance)"
    ]
   },
   {
