Fix syntax of adding multiple subplots all around and fix template

--- a/qcodespp_template.ipynb
+++ b/qcodespp_template.ipynb
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=loop.run(currentX,voltageX,resistance)"
+    "data=loop.run([currentX,voltageX,resistance])"
    ]
   },
   {
@@ -259,7 +259,7 @@
     }
    ],
    "source": [
-    "data=loop.run(currentX,voltageX,resistance)"
+    "data=loop.run([currentX,voltageX,resistance])"
    ]
   },
   {
@@ -357,7 +357,7 @@
     }
    ],
    "source": [
-    "data=loop.run(currentX,voltageX,resistance)"
+    "data=loop.run([currentX,voltageX,resistance])"
    ]
   },
   {
@@ -461,7 +461,7 @@
     }
    ],
    "source": [
-    "data=loop.run(currentX,voltageX,resistance)"
+    "data=loop.run([currentX,voltageX,resistance])"
    ]
   },
   {
